# MMMI

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md  best_feasible_point.txt  eval_stat_nomad.0.txt  generate_CI.py  main.cpp  mcmc_submit_classe_4.sh  mcmc_submit_classe_8.sh  nomad_submit_classe_4.sh  nomad_submit_classe_8.sh  question.txt  set.sh  stat_nomad.0.txt  submit.sh  submit_classe_1.sh  submit_classe_2.sh  submit_classe_4.sh  submit_classe_8.sh
1-memoire-document/latex/: beamer.tex  main.tex  sources.bib
NOMAD/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
NOMAD/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runExampleTest.sh
NOMAD/examples/advanced/batch/FixedVariable/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/advanced/batch/LHonly/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/advanced/batch/SuggestAndObserve/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/coco_bbob-constrained/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/example1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/example2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/example3/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/multi_obj/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/multi_obj2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/single_obj/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/single_obj_MPIparallel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/single_obj_parallel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/examples/basic/batch/surrogate_sort/: CTestTestfile.cmake  Makefile  cmake_install.cmake
NOMAD/ext/: Makefile  cmake_install.cmake
NOMAD/ext/sgtelib/: Makefile  cmake_install.cmake
NOMAD/include/nomad/Attribute/: evalAttributesDefinition.hpp
NOMAD/lib/: libnomadEval.so.4.3.1  libnomadUtils.so.4.3.1  libsgtelib.so.2.0.3
NOMAD/src/: CTestTestfile.cmake  Makefile  WriteAttributeDefinitionFile  cmake_install.cmake  libnomadEval.so.4.3.1  libnomadUtils.so.4.3.1  nomad
config/: config.cpp  config.hpp  setup.hpp
data/: .RData  .Rhistory  .~lock.day_data.csv#  .~lock.death_day_all.ods#  Death_1mars_to_14dec.csv  analyse.R  code_matlab.asv  code_matlab.m  data_hosp.txt  data_mort.txt  data_projet_prog.xlsx  day_data.csv  death_day.csv  death_day_age.csv  death_month_age.csv  hosp_tot_17_10.csv  hosp_week_age.csv  integration.csv  integration.json  integration.txt  prev_high_day.csv  prev_low_day.csv  remove_script.sh  save1.txt  save2.txt  save3.txt  save_MCMC0.json  save_MCMC1.json  social_contact_matrix.csv  test.R  ~$data_projet_prog.xlsx
data/Conditions_initiales/: 1_classe_CI.csv  2_classe_CI.csv  4_classe_CI.csv  8_classe_CI.csv  Classe_1_CI.csv  Classe_2_CI.csv
data/DATA_calibration/: day_hosp_csv_all.ods  death_day_all.ods
data/DATA_calibration/0-65_65-inf/: test.R
data/DATA_calibration/10_classe/: day_hosp_csv_all.csv  death_day_all(1).csv
data/DATA_calibration/1_classe/: hosp_1.csv
data/DATA_calibration/2_classe/: hosp_2.csv
data/DATA_calibration/8_classe/: death_8.csv  hosp_8.csv
data/DATA_calibration/Classe_4/: hosp.csv
data/DATA_calibration/Classe_8/: hosp.csv
data/STATS_files/: stat_file_002.csv
data/STATS_files/Classe_1/MCMC/Gibbs/: stat_file_000.csv  stat_file_001.csv  stat_file_081.csv  (+1 more)
data/save_dir/: save.txt  save1.txt  save2.txt  save3.txt  save4.txt  save6.json  save6.txt  save7.json  save_SIRQD_1classe.csv  save_SIRQD_1classe.json  save_SIRQD_1classe_mads.csv  save_SIRQD_2classe.csv  save_SIRQD_2classe.json  save_SIRQD_2classe_mads.csv  save_SIRQD_4classe.csv  save_SIRQD_4classe_mads.csv  save_SIRQD_8classe.csv  save_SIRQD_8classe_mads.csv  save_SIRQD_Classe_2.csv  save_SIRQD_Classe_4.csv  save_SIRQD_Classe_8.csv  save_best_save_normal.json  save_best_save_normal1.json  save_best_save_normal10.json  save_best_save_normal14565498.json  save_best_save_normal2.json  save_best_save_normal3.json  save_best_save_normal6.json  save_best_save_normal6565.json
headers/: Data.hpp  MCMC.hpp  Nomad_file.hpp  ODE.hpp  Parametres.hpp  Stats.hpp  blackbox.hpp  fonction_continuous.hpp  fonction_discret.hpp  fonction_obj.hpp  functions.hpp  integration.hpp  integrator.hpp  optimisation_algo.hpp  read_and_write_data.hpp  read_data.hpp
lib/NOMAD/: libsgtelib.so.2.0.3
lib/NOMAD/lib/: libnomadEval.so.4.3.1  libnomadUtils.so.4.3.1  libsgtelib.so.2.0.3
sources/: CMakeLists.txt  Data.cpp  MCMC.cpp  Nomad_file.cpp  ODE.cpp  Parametres.cpp  Social_contact_matrix.cpp  Stats.cpp  blackbox.cpp  fonction_continuous.cpp  fonction_discret.cpp  fonction_obj.cpp  functions.cpp  integration.cpp  integrator.cpp  optimisation_algo.cpp  read_and_write_data.cpp  read_data.cpp
test/: CMakeLists.txt  test_1.cpp  test_integrator.cpp
visu/: MCMC_visu.ipynb  MCMC_visu.py  MCMC_visu_1 copy.ipynb  MCMC_visu_4.ipynb
(+11 files in other folders)
